# PoliToAdvancedML

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: deep-learning-example.ipynb  deep-learning-notes.ipynb
labs/: alexnet.ipynb
labs/lab3/: dataset.py  model.py  train.py
