[tool.poetry]
name = "politoadvancedml"
version = "0.1.0"
description = "advanced machine learning course"
authors = ["Alessandro Chiabodo"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
